first draft done incl abstract

--- a/joint action and knowing others minds/interacting mindreaders.2.tex
+++ b/joint action and knowing others minds/interacting mindreaders.2.tex
@@ -24,23 +24,44 @@
 %\tableofcontents
 
 \begin{abstract}
-%Goal ascription is fundamental for mindreading.
-What evidence grounds ascriptions of thoughts and actions,
-and how does the evidence support the ascriptions?
-In answering this question, 
-philosophers sometimes focus on mere observation, ignoring interaction.
-The only evidence considered is 
- evidence that would be available to mindreaders 
-observing their targets but in no position to interact with them.
-The present paper,
-which focuses on goal ascription,
-argues that this is a mistake
-and
-identifies evidence 
-available only to mindreaders capable of interacting with their targets.
-Being poised to interact with others may make it possible to know things about their thoughts and actions which one might not otherwise be in a position to know.
-This has consequences for the possible roles of interaction in explaining the evolution and development of mindreading. 
+Could interacting mindreaders be in a position to know things which they would be unable to know if they were manifestly passive observers?
+This paper defends a positive answer.
+Mindreading is sometimes reciprocal: 
+the mindreader's target reciprocates by taking the mindreader as a target for mindreading.
+The paper explains how such reciprocity can significantly narrow the range of possible interpretations of behaviour 
+where mindreaders are, or appear to be, in a position to interact.
+It follows that
+revisions and extensions 
+are needed for 
+standard theories of mindreading
+on which
+all the evidence relevant to mindreading 
+is in principle available to manifestly passive mindreaders.
+The view also has consequences for 
+understanding 
+how abilities to interact combined with comparatively simple forms of mindreading
+may explain the emergence,
+in evolution or development,
+of sophisticated forms of social cognition.
 
+
+%
+%What evidence grounds ascriptions of thoughts and actions,
+%and how does the evidence support the ascriptions?
+%In answering this question, 
+%philosophers sometimes focus on mere observation, ignoring interaction.
+%The only evidence considered is 
+% evidence that would be available to mindreaders 
+%observing their targets but in no position to interact with them.
+%The present paper,
+%which focuses on goal ascription,
+%argues that this is a mistake
+%and
+%identifies evidence 
+%available only to mindreaders capable of interacting with their targets.
+%Being poised to interact with others may make it possible to know things about their thoughts and actions which one might not otherwise be in a position to know.
+%This has consequences for the possible roles of interaction in explaining the evolution and development of mindreading. 
+%
 %What evidence grounds ascriptions of goals to other agents' actions,
 %and how does the evidence support the ascriptions?
 %It is usually assumed that, in answering this question, 
@@ -159,7 +180,7 @@ See also
 	\citet{Tomasello:2007gl} and
 	\citet{tomasello:2008origins}.
 }
-Studying how interaction broadens the evidential basis of mindreading will eventually point to one way of filling in some details on just how interaction might facilitate the emergence of mindreading.
+Studying how interaction broadens the evidential basis of mindreading will eventually point to one way of filling in some details on just how interaction might facilitate the emergence of sophisticated forms of mindreading.
 
 Our claim needs to be qualified in several ways.
 First, we should highlight something already explicit but not yet emphasised:
@@ -723,8 +744,6 @@ available only to interacting mindreaders.
 %might be able to exploit routes to knowledge of the goals of actions
 %which would be unavailable  were  they mere observers.
 
-%*** remove this line: to avoid annoying error only
-\
 
 \section{Your-goal-is-my-goal: a route to knowledge}
 \label{sec:your_goal_is_my_goal}
@@ -939,6 +958,7 @@ must already be  present.
 
 
 \section{Communicative gestures}
+\label{sec:communicative_gestures}
 When introducing the problem of opaque means 
 (in section \vref{sec:opaque_means})
 we saw that it could  affect
@@ -1043,7 +1063,7 @@ in being an attempt to retrieve the reward.
 So far we have illustrated how your-goal-is-my-goal enables responding appropriately to communicative gestures with two examples, pointing and holding up a replica.
 The pattern of reasoning generalises to a wider range of communicative gestures including single-word utterances.
 The basic requirement is this: in a particular context, the goal ascriber must associate a communicative gesture with its referent.
-For instance, she must associate the pointing gesture with the object indicated; or, if (say) she is looking for an individual she must associate an utterance of `daddy' with the appropriate person.%
+For instance, she must associate the pointing gesture with the object indicated; or, if (say) she is looking to see who has an object she must associate an utterance of `daddy' with the daddy.%
 \footnote{
 Such associations appear to be in place by six months of age or earlier \citep{tincoff:1999_beginnings_,tincoff:2011}.
 There is debate on when infants are first able to rapidly associate words with novel objects \citep{werker:1998_acquisition,friedrich:2011_word_}.
@@ -1057,19 +1077,18 @@ infants can form a word-object association before they can comprehend communicat
 As we saw, 
 outside the context of joint action,
 merely associating a gesture with its referent falls short of being able to respond appropriately.
-After all, the goals of the gesture may well be unrelated to the goals of the interpreter's actions.
 But if an interpreter supposes that her target is willing to engage in joint action with her,
 then she may infer that the goal of her target's action is her goal
-and so be motivated to treat the thing associated with a communicative gestures as relevant to the goal of her own actions.
+and so be motivated to treat the thing associated with a communicative gesture as relevant to the goal of her own actions.
 This will reliably (but not always) enable her to respond appropriately to the communicative gesture even without understanding it as a communicative gesture.
 And once she has experienced how that communicative gesture works as a tool for guiding others' actions in the context of joint action,
 she may be in a position to realise, further, that the same tool can be used in other contexts.
 
 This, in barest outline, is 
 how
-abilities to engage in joint action
+possessing abilities to engage in joint action
 mean that 
-a mindreader with an ability to ascribe simple goals only and no understanding of communicative intent
+an individual with an ability to ascribe simple goals only and no understanding of communicative intent
 might 
 nevertheless reliably respond appropriately to some communicative gestures,
 and so come be in a position to understand how such gestures can be used to guide others' actions.%
@@ -1083,7 +1102,7 @@ identifying the referents of communicative gestures (`referential understanding'
 and
 are initially two distinct `action interpretation systems'   \citep[p.\ 456]{Csibra:2003kp}.
 %(although of course they come together later in development)
-We have not shown that this hypothesis wrong.
+We have not shown that this claim wrong.
 But we have shown that there is another possibility:
 the referential stance may 
 emerge from
@@ -1096,24 +1115,25 @@ anything's evolution or development.
 Our point is just to illustrate one of several ways in which
 interaction may matter for mindreading.
 Widening the evidential basis for goal ascription
-to include evidence available only to interpreters capable of joint action with their targets
+to include evidence available only to mindreaders actually or apparently capable of joint action with their targets
 makes possible 
-novel hypotheses about the emergence, in evolution or development (and perhaps even both), of communicative gestures.
+novel hypotheses about the emergence, in evolution or development (and perhaps both), of communicative gestures.
 
 %This is one illustration of how capacities for joint action, even very simple forms of joint action, might be relevant to explaining the development or evolution of richer forms of cultural cognition.
 
 
 \section{The problem of false belief}
 \label{sec:false_belief}
-So far we have been arguing for the value of interaction to interpreters 
+So far we have been arguing for the value of interaction for goal ascription
 on the grounds that 
-interacting interpreters, unlike mere observers, have 
+interacting mindreaders, unlike mere observers, have 
 a route to knowledge of the goals of others' actions
 which avoids the problem of opaque means.
-There is another reason for supposing that interaction matters for interpretation.
-To introduce this reason we must first describe another problem affecting interpreters, the problem of false belief.
+There is another reason for supposing that interaction matters for goal ascription and (at least indirectly) for mindreading more generally.
+To introduce this reason we must first describe another problem affecting goal ascription, the problem of false belief.
 
-The problem of opaque means occurs when interpreters  must rely entirely on observation and cannot identify to which ends actions are means.
+Recall that the problem of opaque means occurs when interpreters  must rely entirely on observation and cannot identify to which ends actions are means 
+(see section \vref{sec:opaque_means}).
 A yet more familiar problem affecting goal ascription 
 arises from the interdependence of beliefs and goals.
 To illustrate, 
@@ -1164,46 +1184,63 @@ both
 \emph{which} differences in belief have the potential to impair  goal ascription
 and also 
 \emph{who} needs to be aware of those differences.
+This is a second illustration of how the possibility of interaction 
+may enable 
+	even individuals with only limited insights into others' minds and actions
+ 	to exploit reciprocity in mindreading---to exploit the fact that their targets are sometimes themselves mindreading the mindreaders.
 
-In short, then, abilities to engage in joint action provide an interpreter with a route to knowledge of the goals of other agents' actions which does not depend on her knowledge of what her target believes.
+In short, then, abilities to engage in joint action open a route to knowledge of the goals of other agents' actions which does not depend on the goal ascriber knowing what her target believes even when their beliefs relevantly differ.
 This is not because abilities to engage in joint action provide a way to avoid the problem of false beliefs altogether.
 Rather they shift the burden of resolving the problem of false belief from an interpreter to her target.
 This is potentially valuable for interpreters who have limited insight into their targets' beliefs,
 or who lack abilities to track differences in belief altogether.
 
-On a purely observational model of interpretation,
-it seems inevitable that an interpreter who is unable to track others' beliefs 
-will have to proceed as if there were no differences in beliefs.
-As several philosophers' arguments suggest,
-it is plausible that 
-the interdependence of beliefs and goals 
-means that
-an interpreter will always be able to assign goals to others' actions 
-in a way that is consistent with their beliefs not differing from her own
-(*refs: Davidson; \citealp[p.\ 49]{Bennett:1976rg}).
-If so,
-on a purely observational model of interpretation
-there is no straightforward way in which
+On a purely observational model of mindreading,
+it seems inevitable,
+given that observed behaviours will be consistent with many different ascriptions of beliefs and goals,
+that a goal ascriber who was unable to track others' beliefs 
+would often have to proceed as if there were no relevant differences in beliefs.%
+\footnote{
+Compare \citet[p.\ 49]{Bennett:1976rg}.  For a related argument concerning beliefs and desires rather than beliefs and goals, see 
+	\citet[p.\ 17]{Davidson:1984pr}
+%what can fairly be treated as evidence for any one of the propositional attitudes can count as evidence only if untested assumptions are made about others.”  [1984d, p. 17]
+and
+	(\citeyear[pp.\ 159--167]{Davidson:1984wh}).
+%`This creates a problem, for it means that behaviour, which is the main evidential basis for attributions of belief and desire, is reckoned the result of two forces less open to public observation. Thus where one constellation of beliefs and desires will rationalize an action, it is always possible to find a quite different constellation that will do as well. Even a generous sample of actions threatens to leave open an unacceptably large number of alternative explanations.'
+%`of course it cannot be assumed that speakers never have false beliefs. Error is what gives belief its point. We can, however, take it as given that most beliefs are correct. The reason for this is that a belief is identified by its location in a pattern of beliefs; it is this pattern that determines the subject matter of the belief, what the belief is about. Before some object in, or aspect of, the world can become part of the subject matter of a belief (true of false) there must be endless true beliefs about the subject matter. False beliefs tend to undermine the identification of the subject matter; to undermine, therefore, the validity of a description of the belief as being about that subject.'
+}
+So on a purely observational model of interpretation
+there may fail to be any straightforward way in which
 the need to track differences in belief 
-will become apparent to an interpreter.
+could become apparent to a mindreader who did not already understand that beliefs can be false.
 Things are different
-if we extend our model of interpretation
+if we extend our model of mindreading
 to take into account the possibility of interaction.
 We can then see how
-an interpreter who is unable to track others' beliefs
+a goal ascriber who is unable to track others' beliefs
 will encounter anomalies.
-For some differences in belief will mean that
+For some differences in belief 
+(the mere fact of such differences, not anyone's awareness of them)
+will mean that
  ordinary, purely observational routes to knowledge will result in ascribing one goal
  whereas
  exploiting your-goal-is-my-goal would result in a ascribing a different goal.
-That is, the evidence available to an interpreter may inexplicably support two incompatible ascriptions. 
+That is, the evidence available to a goal ascriber may inexplicably support two incompatible ascriptions. 
 In this way,
 differences in belief have the potential to cause puzzling anomalies
-even before the interpreter is able to track such differences.
+even before a mindreader is able to track such differences.
 This 
 raises the possibility
 that abilities to engage in joint action
-may play a role in explaining how  awareness of belief emerges.
+may play a role in explaining how  awareness of belief emerges.%
+\footnote{
+Some researchers have suggested that awareness of belief is innate in humans
+\citep{Leslie:1998nq,Leslie:2005ef,Baillargeon:gx},
+although this view is currently controversial
+\citep{Apperly:2009ju,Ruffman:2005yl}.
+But whether or not the emergence in development of awareness of belief stands in need of explanation,
+few would doubt that its emergence in evolution does need explaining.
+}
 
 
 
@@ -1215,11 +1252,11 @@ but
 open to interacting mindreaders.
 In pursuing this aim we focused on interactions which are joint actions.
 Our suggestion was this.
-Where an interpreter recognizes that her target is willing to engage in joint action
+Where a mindreader recognizes that her target is willing to engage in joint action
 and is unwilling to change which goals her own actions will be directed to,
 she may be in a position to know
 that the goals of her target's actions will be her goals.
-This in outline is the `your-goal-is-my-goal' route to knowledge.
+This in outline is the `your-goal-is-my-goal' route to  knowledge (see further section \vref{sec:your_goal_is_my_goal}).
 
 
 %***Return to the leading theories?
@@ -1230,23 +1267,22 @@ This in outline is the `your-goal-is-my-goal' route to knowledge.
 
 
 To show that this route to knowledge is potentially valuable,
-we argued that it enables interpreters to overcome two problems,
+we argued that it enables mindreaders to overcome two problems,
 the problem of opaque means
 and the problem of false belief.
 These problems may rarely arise for human adults thanks to sophisticated linguistic communication and extensive knowledge of how things can be achieved.  
 But interest in the evolution or development of mindreading
 motivates focusing on 
-interpreters with
+those with
   absent or fledgling communicative skills,
   limited insight into others' minds
   and narrow knowledge of how things work.
-For such interpreters
-the problems of false belief and opaque means may easily arise,
+For such individuals
+the problems of opaque means and false beliefs may easily arise,
 particularly in cases involving novel tools 
 and 
 communicative gestures.
-Interpreters 
-could overcome the two problems 
+Both problems can be overcome 
 by exploiting the your-goal-is-my-goal route to knowledge.
 It follows that 
 expertise with 
@@ -1254,31 +1290,50 @@ expertise with
   and
   communicative gestures
 does not presuppose knowledge of others' intentions and beliefs.
-Such expertise,
+This shows that it is coherent to suppose that 
+ expertise with tools or communicative gestures (or both),
 far from  presupposing sophisticated forms of mindreading,
 might instead
-play a role in explaining their emergence in evolution or development (or both).
+play a role in explaining their emergence in evolution or development.
 
 How might this work?
-***sketch the story***
-Clearly this is a wild conjecture,
-and not one that we have given any reason for accepting.
+Here is a wild conjecture about
+a path from simple forms of interaction to sophisticated forms of mindreading.
+We have seen that 
+	abilities to ascribe goals to actions 
+ together with
+	abilities to engage in simple forms of joint action involving distributive goals
+ may be sufficient to explain how individuals come to productively misunderstand communicative gestures in the context of joint action (see section \vref{sec:communicative_gestures}).
+This might  be a step towards responding appropriately to, and using, communicative gestures in other contexts,
+which might then play a role in explaining how early forms of communication emerge.
+But we know that early, non-linguistic forms of communication are essential for the later appearance of linguistic communication,
+and abilities to communicate by language in turn appear to play an important role in the development (at least) of sophisticated forms of mindreading.%
+\footnote{
+A range of evidence is reviewed in contributions to \citet{Astington2005ot}.
+}
+Now clearly this wild conjecture is not one that we have provided any reason for accepting.
 Our point in mentioning it is merely to illustrate how
- better understanding the role of interaction in goal ascription and mindreading generally
-may eventually lead to discoveries
+ better understanding the role of interaction in goal ascription and  mindreading more generally
+might eventually lead to discoveries
 on how
  sophisticated forms of cognition
  emerge from
  conceptually and cognitively undemanding forms of interaction.
-If the culture of tool use,
-the simpler forms of communicative gesture
-or the sharing of knowledge and other mental states
-originates in abilities to interact,
-then we need to know how interaction could lead to the emergence of these things.
-Our  suggestion has been that
+A culture of tool use,
+	the flexible use of communicative gestures,
+	or insight into interpersonal differences in belief and other mental states:
+if any or all of these 
+originate in abilities to interact,
+then we need to know how interaction could lead to their emergence.
+And one small step towards acquiring this knowledge might just be 
 understanding how interacting mindreaders 
-could know things about their minds which mere observers might not be in a position to know
-will provide some of the details.
+could 
+	come to know things 
+	and
+	encounter anomalies
+which they might not be able to know or encounter if they were mere observers.
+% matters because it enables us to better understand the evidential basis of mindreading---%
+%and it might just also matter because it plays a role in demonstrating the theoretical coherence of hypotheses about mindreading's emergence.
 
 
 \bibliography{$HOME/endnote/phd_biblio}
